syntax = "proto3";

package shortVideoCoreService.internal.conf;

option go_package = "github.com/cloudzenith/DouTok/backend/shortVideoCoreService/internal/conf;conf";

import "google/protobuf/duration.proto";

message Config {
  Server server = 1;
  Database database = 2;
  Redis redis = 3;
  ThirdParty third_party = 4;
  Common common = 5;
}

message Server {
  message HTTP {
    string network = 1;
    string addr = 2;
    google.protobuf.Duration timeout = 3;
  }
  message GRPC {
    string network = 1;
    string addr = 2;
    google.protobuf.Duration timeout = 3;
  }
  HTTP http = 1;
  GRPC grpc = 2;
}

message Database {
  string driver = 1;
  string source = 2;
}
message Redis {
  string network = 1;
  string addr = 2;
  google.protobuf.Duration read_timeout = 6;
  google.protobuf.Duration write_timeout = 7;
}

message ThirdParty {
  message BaseService {
    string address = 1;
  }
  BaseService base_service = 1;
}

message Common {
  message Auth {
    string secret = 1;
    int64 expire = 2;
  }
  Auth auth = 1;
  int64 node = 2;
}

message VideoService {
  int32 batch_num = 10; // 每次 feed 拉取的视频数量
}
